style/media.css
/* ... */
@media (max-width: 740px) {
    .container {
        width: 670px;
    }
    .promo__list {
        grid-template-columns: repeat(4, 145px);
        gap: 10px;
    }
    .header__inner {
        gap: 29px 29px;
    }
    .header__search-input {
        max-width: 440px;
    }
}

@media (max-width: 650px) {
    .container {
        width: 590px;
    }
    .promo__list {
        grid-template-columns: repeat(4, 125px);
        gap: 10px;
    }
    .header__inner {
        gap: 20px 20px;
    }
    .header__search-input {
        max-width: 390px;
    }
    .promo__item3-text {
        left: 5px;
    }
    .promo__item10-text {
        bottom: 5px;
    }
}

@media (max-width: 576px) {
    .container {
        width: 500px;
    }
    .header {
        padding: 20px 0 0;
        margin: 0 0 41px;
    }
    .header__inner {
    grid-template-columns: repeat(2, auto);
    grid-template-rows: repeat(3, auto);
    gap: 20px 0;
    }
    .logo {
        grid-row: 1 / 2;
        grid-column: 1 / 3;
    }
    .header__btn-nav {
        grid-row: 2 / 3;
        grid-column: 1 / 2;
    }
    .header__search {
        grid-column: 1 / 3;
        grid-row: 3 / 4;
    }
    .header__search-input {
        max-width: 400px;
        height: 30px
    }

    .header__search-btn {
        padding: 10px 22px;
    }
    .shop-nav {
        grid-column: 2 / 3;
        grid-row: 2 / 3;
        justify-self: end;
    }
    .shop-nav__text {
        display: none;
    }

    .shop-nav__icon {
        width: 20px;
        height: 20px;
    }
    .shop-nav__list {
        column-gap: 26px;
        grid-template-columns: repeat(3, 25px);
    }
    .basket__count {
        top: 0;
        right: -3px;
        width: 12px;
        height: 12px;
    }
    /* Блок промо */
    .promo {
        padding: 0 0 10px;
    }
    .promo__list {
        grid-template-columns: repeat(2, 200px);
        grid-template-rows: 280px 200px 118px 280px repeat(2, 118px) repeat(2, 200px) 123px;
        gap: 40px;
    }
    .promo__item1 {
        grid-column: 1 / 3;
        grid-row: 1 / 2;
    }
    .promo__item1-info {
        font-size: 22px;
        padding: 50px 0 0 29px;
        margin: 0 0 120px;
        max-width: none;
    }
    .promo__item1-count-end {
        font-size: 8px;
        margin-bottom: 6px;
    }
    .promo__item1-count {
        padding: 0 0 35px;
    }
    .promo__item1-count-number {
        font-size: 20px;
    }
    .promo__item1-count-interval {
        font-size: 12px;
        margin: 0 8px 0 0;
    }
    .promo__item2-text {
        font-size: 16px;
        line-height: 1.1;
        padding: 66px 0 10px 10px;
        max-width: 100px;
    }
    .promo__item2-text_normal {
        font-size: 16px;
        line-height: 1.1;
    }
    .promo__item3::after {
        right: 10px;
        bottom: 10px;
    }
    .promo__item3-text {
        font-size: 16px;
    }
    .promo__item4::after {
        left: 10px;
        top: 10px;
    }
    .promo__item5 {
        grid-column: 1 / 3;
        grid-row: 4 / 5;
    }
    .promo__item5-text {
        padding: 9px 25px;
        font-size: 12px;
        left: 10px;
        bottom: 10px;
        min-width: 210px;
    }
    .promo__item6 {
        grid-column: 1 / 3;
        grid-row: 5 / 6;
    }
    .promo__item6-text {
        font-size: 12px;
        padding: 88px 0 0 10px;
    }
    .promo__item7 {
        grid-column: 1 / 3;
        grid-row: 6 / 7;
    }
    .promo__item7::after {
        right: 10px;
        bottom: 10px;
    }
    .promo__item7-text {
        font-size: 12px;
        padding: 88px 0 0 10px;
    }
    .promo__item8 {
        grid-column: 1 / 3;
        grid-row: 9 / 10;
    }
    .promo__item8-text {
        padding: 7px 41px;
        font-size: 12px;
        left: 15px;
        bottom: 5px;
    }
    .promo__item9 {
        grid-column: 1 / 2;
        grid-row: 7 / 9;
    }
    .promo__item9::after {
        right: 10px;
        bottom: 10px;
    }
    .promo__item10 {
        grid-column: 2 / 3;
        grid-row: 7 / 8;
    }
    .promo__item10::after {
        top: 10px;
        left: 10px;
    }
    .promo__item10-text {
        font-size: 12px;
        padding: 106px 0 0 9px;
    }
    .promo__item11 {
        grid-column: 2 / 3;
        grid-row: 8 / 9;
    }
}

@media (max-width: 480px) {
    .container {
        width: 400px;
    }
    .promo__list {
        grid-template-columns: repeat(2, 160px);
        grid-template-rows: 280px 150px 118px 280px repeat(2, 118px) repeat(2, 150px) 123px;
        gap: 20px;
    }
    .header__search-input {
        max-width: 340px;
    }
    .promo__item3-text {
        font-size: 12px;
    }
}

@media (max-width: 380px) {
    .container {
        width: 340px;
    }
    .header__search-input {
        max-width: 280px;
    }
    .promo__list {
        grid-template-columns: repeat(2, 130px);
        grid-template-rows: 280px 130px 118px 280px repeat(2, 118px) repeat(2, 130px) 123px;
        gap: 20px;
    }
}

